--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6,10 +6,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import ast\n",
-    "import re"
+    "import matplotlib.pyplot as plt"
    ],
    "metadata": {
     "collapsed": false
