--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import re"
    ],
    "metadata": {
     "collapsed": false
@@ -269,6 +270,22 @@
    "cell_type": "markdown",
    "source": [
     "### 9. Min and max salary proposals"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Extract minimum and maximum values from 'Salary' column\n",
+    "df['Min Salary'] = df['Salary'].apply(lambda x: int(re.search(r\"'Min': (\\d+)\", x).group(1)) if pd.notnull(x) and re.search(r\"'Min': (\\d+)\", x) else None)\n",
+    "df['Max Salary'] = df['Salary'].apply(lambda x: int(re.search(r\"'Max': (\\d+)\", x).group(1)) if pd.notnull(x) and re.search(r\"'Max': (\\d+)\", x) else None)\n",
+    "\n",
+    "# Print the 'Min Salary' and 'Max Salary' columns\n",
+    "print(df[['Min Salary', 'Max Salary']])"
    ],
    "metadata": {
     "collapsed": false
