add images to README.md

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 1. start scraping vacancies from djinni.co with your skill and save the results to djinni.csv. Just put your skill to keyword=\"your skill\""
+    "### 1. Start scraping vacancies from djinni.co with your skill and save the results to djinni.csv. Just put your skill to keyword=\"your skill\""
    ],
    "metadata": {
     "collapsed": false
